--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 .App {
   text-align: center;
+  font-size: 20px;
 }
 
-.App-logo {
+h1, h2 {
+  font-size: 2em;
+}
+
+a{
+  display: inline-block;
+  margin:0 0.5em;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +45,5 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
