add scss and combine routesin app.js file

--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -3,4 +3,7 @@ form {
   flex-direction: column;
   justify-content: flex-start;
   width: 50%;
+  text-align: left;
+  margin: 30px;
+  margin-top: 80px;
 }
