--- a/src/components/DisplayChart.scss
+++ b/src/components/DisplayChart.scss
@@ -8,13 +8,8 @@
 }
 
 .content {
-  background: rgb(26, 30, 80);
-  background: linear-gradient(
-    45deg,
-    rgba(26, 30, 80, 1) 0%,
-    rgba(46, 87, 126, 1) 50%,
-    rgba(57, 108, 144, 1) 100%
-  );
+  background: white;
+
   color: white;
 }
 
