--- a/src/components/Candlestick/DisplayChart.scss
+++ b/src/components/Candlestick/DisplayChart.scss
@@ -1,6 +1,8 @@
 .Chart {
   font-family: sans-serif;
-  text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .sidebar {
