--- a/src/components/TradeTable.scss
+++ b/src/components/TradeTable.scss
@@ -1,6 +1,6 @@
-.table {
+.trade-table {
   border: solid black;
-  margin-top: 80px;
-  margin-left: 20%;
+  margin-top: 30px;
+  margin-left: 0;
   text-align: center;
 }
