--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -1,15 +1,15 @@
-.dashboard {
+.dashboard-container {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-.right-side {
+.menu-container {
   display: flex;
   flex-direction: column;
 }
 
-.dropdown {
+.info-container {
   text-align: center;
   margin-left: 30%;
 }
