--- a/src/components/DropDownMenu/MenuButton.scss
+++ b/src/components/DropDownMenu/MenuButton.scss
@@ -1,9 +1,9 @@
 button {
   background-color: white;
-  border: none;
   padding: .5em;
 }
 
 button:hover {
   background-color: rgb(203, 203, 203);
+  cursor: pointer;
 }
