--- a/src/components/DropDownMenu/DropMenu.scss
+++ b/src/components/DropDownMenu/DropMenu.scss
@@ -1,7 +1,13 @@
-.dropdown-menu {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-  margin: 5px;
+
+
+
+.menu-button {
+  background-color: white;
+  padding: .5em;
+  margin: 10px;
 }
 
+.menu-button:hover {
+  background-color: rgb(203, 203, 203);
+  cursor: pointer;
+}
