--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ button:hover {
   cursor: pointer;
 }
 
+
 .navbar {
   display: flex;
   border: none;
@@ -48,9 +49,9 @@ button:hover {
   text-align: center;
   margin-top: 60px;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
 }
+
 
 .chart-dashboard-container {
   display: flex;
