--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,12 @@ button:hover {
   width: 100%;
   margin: 10px
 }
+
+@media only screen and (max-width: 1024px) {
+  .chart-dashboard-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 10px
+  }
+}
