--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,9 +1,8 @@
 .form-container{
-  margin: 50px;
   margin-bottom: 300px;
-  padding: 30px;
   display: block;
-  width: 100%;
+  margin: 50px;
+  width: 90%;
   height: auto;
 }
 
@@ -13,4 +12,8 @@
 
 .form-button {
   margin-top: 20px;
+}
+
+form {
+  width: 100%;
 }
