--- a/src/App.css
+++ b/src/App.css
@@ -54,22 +54,34 @@ button:hover {
   position: relative;
 }
 
-#coins1 {
+#container {
   width: 100%;
+  height: 800px;
+  margin-top: 60px;
+  text-align: center;
+  background-image: url("./background.jpeg");
+  background-color: #cccccc;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; 
+  overflow: hidden;
+}
+
+.coins {
+  width: 100%;
+  margin-top: 100px;
   position: absolute; 
-  top: 110px; 
-  left: 0; 
   margin-left: 0;
 }
 
-
+/* 
 #coins2 {
   width: 100%;
   position: absolute; 
-  top: 250px; 
+  top: 800px; 
   right: 200px;
   margin-left: 0;
-}
+} */
 
 
 .chart-dashboard-container {
