--- a/src/components/CoinTableRow.scss
+++ b/src/components/CoinTableRow.scss
@@ -1,7 +1,8 @@
-td {
-  padding: .5em
-}
 
-thead {
-  background-color: rgb(194, 194, 193);
-}
+// td {
+//   padding: .5em
+// }
+
+// thead {
+//   background-color: rgb(194, 194, 193);
+// }
