--- a/src/components/TradeTableRow.scss
+++ b/src/components/TradeTableRow.scss
@@ -1,7 +1,7 @@
-td {
-  padding: .5em
-}
+// td {
+//   padding: .5em
+// }
 
-thead {
-  background-color: rgb(194, 194, 193);
-}
+// thead {
+//   background-color: rgb(194, 194, 193);
+// }
