--- a/src/components/CoinTable.scss
+++ b/src/components/CoinTable.scss
@@ -1,11 +1,12 @@
-.coin-container {
-  display: flex;
-  justify-content: center;
-}
-.coin-table {
-  border: solid black;
-  margin-top: 80px;
-  text-align: center;
-  width: 100%;
-}
+@import "~bootstrap/scss/bootstrap";
+// .coin-container {
+//   display: flex;
+//   justify-content: center;
+// }
+// .coin-table {
+//   border: solid black;
+//   margin-top: 80px;
+//   text-align: center;
+//   width: 100%;
+// }
 
