--- a/src/components/TradeTable.scss
+++ b/src/components/TradeTable.scss
@@ -1,6 +1,7 @@
+@import "~bootstrap/scss/bootstrap";
+
 .trade-table {
-  margin-top: 30px;
-  margin-left: 0;
+  margin-top: 60px;
   text-align: center;
   width: 100%;
 }
