add text to header img

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,19 @@ button:hover {
   margin-left: 75px;
   margin-top: 0;
 }
+
+.chart-dashboard-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 10px
+}
+
+@media only screen and (max-width: 1024px) {
+  .chart-dashboard-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 10px
+  }
+}
