--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -17,37 +17,59 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; 
   overflow: hidden;
+
 }
 
 .coins {
   width: 100%;
-  margin-top: 100px;
-  position: absolute; 
+  margin-top: 0;
   margin-left: 0;
 }
 
-/* 
-#coins2 {
-  width: 100%;
-  position: absolute; 
-  top: 800px; 
-  right: 200px;
-  margin-left: 0;
-} */
 
+// #coins2 {
+//   width: 100%;
+//   position: absolute; 
+//   top: 800px; 
+//   right: 200px;
+//   margin-left: 0;
+// } 
 
-.chart-dashboard-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: 10px
+.header-text {
+  color: white;
+  position: absolute;              
+  top: 80%;  
+  left: 10%;                      
+  transform: translate(0, -50%);
+  font-weight: 600;    
+  font-size: 80px;
+}
+.intro {
+  color:white;
+  width: 300px;
+  text-align: left;
+  margin-left: 90px;
+  margin-top: 90px;
+  font-size: 35px;
 }
 
 @media only screen and (max-width: 1024px) {
-  .chart-dashboard-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 10px
+  .intro {
+    color:white;
+    width: 300px;
+    text-align: left;
+    margin-left: 70px;
+    margin-top: 70px;
+    font-size: 30px;
+  }
+
+  .header-text {
+    color: white;
+    position: absolute;
+    top: 90%;  
+    left: 8%;                      
+    transform: translate(0, -50%);
+    font-weight: 600;    
+    font-size: 60px;
   }
 }
