--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
+
 h1, h2 {
   font-size: 2em;
 }
 
 
-a{
-  display: inline-block;
-  margin:0 0.5em;
-  text-decoration: none;
+a {
+  text-decoration: none!important;
+  margin:0;
   padding: 5px;
 }
 
 a:hover {
-  background-color: #416fc4;
+  background-color: #ffffff;
 }
 
 
@@ -26,9 +26,8 @@ button:hover {
 
 
 .navbar {
-  display: flex;
   border: none;
-  background: #1d1f5e;
+  background: #38537B;
   padding: 15px 0;
   border-radius: 0;
   margin-bottom: 0;
@@ -42,9 +41,10 @@ button:hover {
   font-size: 22px;
   color: white;
   font-family: Orbitron;
-  margin-left: 75px;
   margin-top: 0;
+  padding: 20px;
 }
+
 
 .chart-dashboard-container {
   display: flex;
