--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ button:hover {
 .nav-text {
   font-size: 22px;
   color: white;
-  font-family: Orbitron;
+  font-family: Arial;
   margin-top: 0;
   padding: 20px;
 }
