--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -5,7 +5,8 @@
 }
 
 .info-container {
-  margin-left: 30%;
+  margin-left: 20%;
+  margin-top: 20px;
 }
 
 
@@ -15,10 +16,10 @@
     flex-direction: row;
     width: 90%;
     margin: 10px;
-    text-align: right;
+    text-align: center;
   }
   .info-container {
-    margin-left:30%;
+    margin-left:20%;
     margin-right: 20px;
   }
   .menu-container {
