--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ button:hover {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 10px
+  margin: 10px;
+  margin-bottom: 100px;
 }
 
 @media only screen and (max-width: 1024px) {
