--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -1,3 +1,6 @@
+.dashboard-container {
+  margin-bottom: 50px;
+}
 .menu-container {
   display: flex;
   flex-direction: column;
@@ -17,6 +20,8 @@
     width: 90%;
     margin: 10px;
     text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   .info-container {
     margin-left:20%;
