--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,13 +1,12 @@
 .form-container{
   margin-bottom: 300px;
   display: block;
-  margin: 50px;
-  width: 90%;
-  height: auto;
-}
-
-.input-feild {
-  margin: 10px
+  margin-left: 20%;
+  margin-top: 10%;
+  background: #fff;
+  width: 50%;
+  padding: 50px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
 .form-button {
@@ -16,4 +15,63 @@
 
 form {
   width: 100%;
+}
+
+input {
+  outline: none;
+  display: block;
+  width: 100%;
+  margin: 0 0 20px;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  color: #ccc;
+  box-sizing: border-box;
+  font-size: 14px;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transition: 0.2s linear;
+}
+
+input:focus {
+  color: #333;
+  border: 1px solid #44c4e7;
+}
+
+label {
+  display: inline-block;
+  clear: left;
+  width: 150px;
+  text-align: left;
+}
+
+.lable-input {
+  display: flex;
+  align-items: flex-start;
+}
+
+.button{
+  margin-top: 40px;
+  background-color: white;
+  color: black;
+  border: 2px solid #008CBA; 
+  font-size: 20px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  width: 200px;
+}
+
+.button:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form-lable {
+  margin-bottom: 40px;
+  text-align: center;
 }
