--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,10 +1,10 @@
 .form-container{
-  margin-bottom: 300px;
+  margin-bottom: 200px;
   display: block;
-  margin-left: 20%;
+  margin-left: 30%;
   margin-top: 10%;
   background: #fff;
-  width: 50%;
+  width: 500px;
   padding: 50px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
@@ -74,4 +74,17 @@ label {
 .form-lable {
   margin-bottom: 40px;
   text-align: center;
+}
+
+@media only screen and (max-width: 1024px) {
+.form-container{
+  margin-bottom: 200px;
+  display: block;
+  margin-left: 20%;
+  margin-top: 10%;
+  background: #fff;
+  width: 50%;
+  padding: 50px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+}
 }
