--- a/src/components/TradeTable/TradeTable.scss
+++ b/src/components/TradeTable/TradeTable.scss
@@ -2,7 +2,9 @@
 @import "~bootstrap/scss/bootstrap";
 
 .trade-table {
-  margin-top: 30px;
   text-align: center;
   width: 100%;
+  margin-top: 10%;
+  margin-bottom: 200px;
+  display: block;
 }
