--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,12 +1,29 @@
+.form-back-container{
+  width: 100%;
+  height: 800px;
+  margin-top: 0;
+  text-align: center;
+  background-image: url("../background.jpeg");
+  background-color: #cccccc;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; 
+  overflow: hidden;
+}
 .form-container{
   margin-bottom: 200px;
   display: block;
   margin-left: 30%;
   margin-top: 10%;
   background: #fff;
+  position: absolute;              
+  top: 40%;  
+  left: 3%;                      
+  transform: translate(0, -50%);
   width: 500px;
   padding: 50px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  border-radius: 4px;
 }
 
 .form-button {
@@ -22,7 +39,7 @@ input {
   display: block;
   width: 100%;
   margin: 0 0 20px;
-  padding: 10px 15px;
+  padding: 5px 10px;
   border: 1px solid #ccc;
   color: #ccc;
   box-sizing: border-box;
@@ -31,6 +48,7 @@ input {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: 0.2s linear;
+  border-radius: 2px;
 }
 
 input:focus {
@@ -41,11 +59,12 @@ input:focus {
 label {
   display: inline-block;
   clear: left;
-  width: 150px;
+  width: 130px;
+  margin-right: 30px;
   text-align: left;
 }
 
-.lable-input {
+.label-input {
   display: flex;
   align-items: flex-start;
 }
@@ -58,7 +77,9 @@ label {
   font-size: 20px;
   border-radius: 4px;
   transition-duration: 0.4s;
-  width: 200px;
+  width: 150px;
+  font-family: 'Ubuntu', sans-serif;
+
 }
 
 .button:hover {
@@ -71,9 +92,21 @@ label {
   justify-content: center;
 }
 
-.form-lable {
+.form-label {
   margin-bottom: 40px;
   text-align: center;
+}
+
+.form-coins {
+  width: 100%;
+  margin-top: 40px;
+  margin-left: 0;
+}
+
+.icon {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 4px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -82,9 +115,14 @@ label {
   display: block;
   margin-left: 20%;
   margin-top: 10%;
+  position: absolute;              
+  top: 40%;  
+  left: 6%;                      
+  transform: translate(0, -50%);
   background: #fff;
   width: 50%;
   padding: 50px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 }
+
