--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -5,10 +5,9 @@
   display: flex;
   position: relative;
 }
-
 #container {
   width: 100%;
-  height: 800px;
+  height: 700px;
   margin-top: 0;
   text-align: center;
   background-image: url("../background.jpeg");
@@ -20,9 +19,12 @@
 
 }
 
-.coins {
+.intro-container {
+  display: flex;
+}
+.home-coins {
   width: 100%;
-  margin-top: 0;
+  margin-top: -100px;
   margin-left: 0;
 }
 
@@ -49,8 +51,32 @@
   width: 300px;
   text-align: left;
   margin-left: 90px;
-  margin-top: 90px;
+  margin-top: 40px;
   font-size: 35px;
+  font-family: 'Ubuntu', sans-serif;
+
+}
+
+
+.track-button{
+  margin-top: 100px;
+  margin-left: 50%;
+  margin-right: 0px;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  border: 2px solid rgba(255, 255, 255, 0.5); 
+  font-size: 20px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  width: 200px;
+  height: 80px;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.track-button:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  border: 2px solid white; 
 }
 
 @media only screen and (max-width: 1024px) {
@@ -71,5 +97,26 @@
     transform: translate(0, -50%);
     font-weight: 600;    
     font-size: 60px;
+  }
+
+  .track-button{
+    margin-top: 100px;
+    margin-left: 40%;
+    margin-right: 20px;
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.5); 
+    font-size: 20px;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+    width: 200px;
+    height: 80px;
+    font-family: 'Ubuntu', sans-serif;
+  }
+
+  .track-button:hover {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    border: 2px solid white; 
   }
 }
