--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -7,7 +7,7 @@
 }
 #container {
   width: 100%;
-  height: 800px;
+  height: 1000px;
   margin-top: 0;
   text-align: center;
   background-image: url("../background.jpeg");
@@ -16,7 +16,6 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; 
   overflow: hidden;
-
 }
 
 .intro-container {
@@ -61,7 +60,7 @@
   margin-bottom: 100px;
   margin-top: 40px;
   font-weight: 800;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0);
   color: white;
   border: 2px solid white; 
   font-size: 20px;
@@ -71,7 +70,7 @@
   height: 50px;
   font-family: 'Ubuntu', sans-serif;
   box-shadow: 0 0 10px white, inset 0 0 10px white;
-  text-shadow: 0 0 20px white;
+  text-shadow: 0 0 10px white;
   z-index: 10;
 }
 
@@ -80,7 +79,7 @@
   color: white !important;
   border: 2px solid white; 
   box-shadow: 0 0 40px white, inset 0 0 20px white;
-  text-shadow: 0 0 20px white;
+  text-shadow: 0 0 10px white;
   transition: .5s;
 }
 
@@ -146,14 +145,17 @@
 //   }
 // }
 
-// @media only screen and (max-width: 2200px) {
-  // .header-text {
-  //   color: white;
-  //   position: absolute;              
-  //   top: 70%;  
-  //   left: 10%;                      
-  //   transform: translate(0, -50%);
-  //   font-weight: 600;    
-  //   font-size: 80px;
-  // }
-// }
+@media only screen and (max-width: 1440px) {
+  #container {
+    width: 100%;
+    height: 800px;
+    margin-top: 0;
+    text-align: center;
+    background-image: url("../background.jpeg");
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; 
+    overflow: hidden;
+  }
+}
