remove state from chart to auto generate

--- a/src/components/TradeTable/TradeTable.scss
+++ b/src/components/TradeTable/TradeTable.scss
@@ -4,7 +4,11 @@
 .trade-table {
   text-align: center;
   width: 100%;
-  margin-top: 10%;
+  margin-top: 2%;
   margin-bottom: 200px;
   display: block;
+}
+
+h2 {
+  padding: .7em;
 }
