add loading animation

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@
 h1, h2 {
   font-size: 2em;
   font-family: 'Ubuntu', sans-serif;
-
 }
-
 
 a {
   text-decoration: none!important;
@@ -59,6 +57,16 @@ button:hover {
   float: right;
 }
 
+.loader {
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-top: 20%;
+  transform: scale(2, 2);
+}
+
+.loader-container {
+  height: 100%
+}
 
 #chart-dashboard-container {
   display: flex;
