--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -7,7 +7,7 @@
 }
 #container {
   width: 100%;
-  height: 1000px;
+  height: 1100px;
   margin-top: 0;
   text-align: center;
   background-image: url("../background.jpeg");
@@ -39,7 +39,9 @@
 .header-text {
   color: white;
   font-weight: 600;
-  margin-top: -18%;    
+  margin-top: -18%; 
+  margin-left: auto;
+  margin-right: auto;   
   font-size: 80px;
   z-index: 10;
 }
@@ -55,10 +57,10 @@
 
 
 .track-button{
-  margin-left: 40%;
-  margin-right: 0px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 100px;
-  margin-top: 40px;
+  margin-top: -20px;
   font-weight: 800;
   background-color: rgba(255, 255, 255, 0);
   color: white;
@@ -110,20 +112,20 @@
     font-size: 80px;
   }
 
-.track-button{
-  margin-left: 40%;
-  margin-right: 0px;
-  margin-bottom: 100px;
-  background-color: rgba(255, 255, 255, 0);
-  color: white;
-  border: 2px solid rgba(255, 255, 255, 0.5); 
-  font-size: 20px;
-  border-radius: 4px;
-  transition-duration: 0.4s;
-  width: 180px;
-  height: 50px;
-  font-family: 'Ubuntu', sans-serif;
-}
+  .track-button{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.5); 
+    font-size: 20px;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+    width: 180px;
+    height: 50px;
+    font-family: 'Ubuntu', sans-serif;
+  }
 }
 
 //   .track-button:hover {
