make table clickable

--- a/src/components/CoinTable/CoinTableRow.scss
+++ b/src/components/CoinTable/CoinTableRow.scss
@@ -1,8 +1,14 @@
+.coin-td {
+  cursor: pointer;
+}
 
-// td {
-//   padding: .5em
-// }
+.coin-column {
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+}
 
-// thead {
-//   background-color: rgb(194, 194, 193);
-// }
+.price {
+  font-size: 17px;
+  cursor: pointer;
+}
