Add background to settings page

--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,4 +1,4 @@
-#form-all-container {
+.form-all-container {
   width: 100%;
   height: 1200px;
   margin-top: 0;
@@ -132,7 +132,7 @@ label {
     margin-top: 150px;
     margin-bottom: auto;
   }
-  #form-all-container {
+  .form-all-container {
     width: 100%;
       height: 800px;
       margin-top: 0;
