--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@ h1, h2 {
 
 }
 
+* {
+  font-family: 'M PLUS Rounded 1c', sans-serif
+}
 
 a {
   text-decoration: none!important;
@@ -31,6 +34,8 @@ button:hover {
 
 
 .navbar {
+  display: flex;
+  justify-content: space-between;
   border: none;
   background: #38537B;
   padding: 15px 0;
@@ -47,7 +52,7 @@ button:hover {
   color: white;
   margin-top: 0;
   float: left;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Righteous', cursive;
 }
 
 .nav-text {
@@ -55,7 +60,7 @@ button:hover {
   color: white;
   margin-top: 0;
   padding: 20px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Righteous', cursive;
   float: right;
 }
 
@@ -77,6 +82,19 @@ button:hover {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+  }
+
+  .navbar-right {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+  }
+}
 /* @media only screen and (max-width: 2000px) {
 
 } */
