--- a/src/App.scss
+++ b/src/App.scss
@@ -82,6 +82,13 @@ button:hover {
   margin-bottom: 100px;
 }
 
+.loading-text {
+  text-align: center;
+  margin-top: 50px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 1024px) {
   #chart-dashboard-container {
     display: flex;
