--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -7,7 +7,7 @@
 }
 #container {
   width: 100%;
-  height: 1100px;
+  height: 75em;
   margin-top: 0;
   text-align: center;
   background-image: url("../background.jpeg");
@@ -50,8 +50,8 @@
   width: 300px;
   text-align: left;
   margin-left: 90px;
-  margin-top: 40px;
-  font-size: 35px;
+  margin-top: 50px;
+  font-size: 40px;
   font-family: 'Ubuntu', sans-serif;
 }
 
