--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -14,6 +14,10 @@
   text-decoration: underline;
 }
 
+.timeframe {
+  display: flex;
+  flex-direction: column;
+}
 
 @media only screen and (max-width: 1024px) {
   .dashboard-container {
