--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -108,7 +108,7 @@
   .header-text {
     color: white;
     font-weight: 500;
-    margin-top: -17%;    
+    margin-top: -10%;    
     font-size: 80px;
   }
 
@@ -128,12 +128,6 @@
   }
 }
 
-//   .track-button:hover {
-//     background-color: rgba(255, 255, 255, 0);
-//     color: white;
-//     border: 2px solid white; 
-//   }
-// }
 
 // @media only screen and (max-width: 1480px) {
 //   .header-text {
@@ -147,11 +141,10 @@
 //   }
 // }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1840px) {
   #container {
     width: 100%;
     height: 800px;
-    margin-top: 0;
     text-align: center;
     background-image: url("../background.jpeg");
     background-color: #cccccc;
@@ -159,5 +152,12 @@
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; 
     overflow: hidden;
+  }
+
+  .header-text {
+    color: white;
+    font-weight: 800;
+    margin-top: -26%;    
+    font-size: 80px;
   }
 }
