--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -90,7 +90,38 @@
   flex-direction: column;
 }
 
+
+// @media only screen and (max-width: 1480px) {
+//   .header-text {
+//     color: white;
+//     position: absolute;              
+//     top: 90%;  
+//     left: 10%;                      
+//     transform: translate(0, -50%);
+//     font-weight: 600;    
+//     font-size: 80px;
+//   }
+// }
+
+
+@media only screen and (max-width: 1840px) {
+  #container {
+    width: 100%;
+    height: 55em;
+  }
+
+  .header-text {
+    color: white;
+    font-weight: 800;
+    margin-top: -26%;    
+    font-size: 80px;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
+  #container {
+    height: 55em;
+  }
   .intro {
     color:white;
     width: 300px;
@@ -105,11 +136,11 @@
     flex-direction: column;
   }
   
-  .header-text {
-    color: white;
+  .header-text{
     font-weight: 500;
     margin-top: -10%;    
     font-size: 80px;
+    color: white;
   }
 
   .track-button{
@@ -128,36 +159,25 @@
   }
 }
 
-
-// @media only screen and (max-width: 1480px) {
-//   .header-text {
-//     color: white;
-//     position: absolute;              
-//     top: 90%;  
-//     left: 10%;                      
-//     transform: translate(0, -50%);
-//     font-weight: 600;    
-//     font-size: 80px;
-//   }
-// }
-
-@media only screen and (max-width: 1840px) {
+@media only screen and (max-width: 768px) {
   #container {
     width: 100%;
-    height: 800px;
-    text-align: center;
-    background-image: url("../background.jpeg");
-    background-color: #cccccc;
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; 
-    overflow: hidden;
+    height: 50em;
   }
 
-  .header-text {
+  .intro {
+    color:white;
+    width: 300px;
+    text-align: left;
+    margin-left: 70px;
+    margin-top: 70px;
+    font-size: 26px;
+  }
+
+  .header-text{
+    font-weight: 500;
+    margin-top: 10%;    
+    font-size: 50px;
     color: white;
-    font-weight: 800;
-    margin-top: -26%;    
-    font-size: 80px;
   }
 }
