modify dashboard styling

--- a/src/components/Candlestick/DisplayChart.scss
+++ b/src/components/Candlestick/DisplayChart.scss
@@ -6,11 +6,13 @@
   position: relative;
 }
 
-.timeframe {
-  display: flex;
-  align-items: center;
-
   label {
     padding-top: .5em;
+  }
+
+@media only screen and (max-width: 1024px) {
+  .Chart {
+    display: flex;
+    justify-content: center;
   }
 }
