--- a/src/App.scss
+++ b/src/App.scss
@@ -77,7 +77,7 @@ button:hover {
 
 #chart-dashboard-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   width: 100%;
   margin: 10px;
   margin-bottom: .5em;
