--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -1,9 +1,7 @@
 .dashboard-container {
   margin-bottom: 40px;
-  margin-top: 40px;
   display: flex;
   flex-direction: column-reverse;
-  float: right;
 }
 
 .menu-container {
@@ -17,9 +15,9 @@
 
 
 .info-container {
-  margin: top 10px;
-  margin-bottom: 40px;
   text-align: center;
+  margin-bottom: 10px;
+  display: inline-block;
 }
 
 .option-lable {
@@ -32,6 +30,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin: 0;
 }
 
 .red {
