--- a/src/components/InfoDisplay.scss
+++ b/src/components/InfoDisplay.scss
@@ -6,3 +6,10 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+.info-text {
+  margin: 10px;
+}
+.info-header {
+  font-size: 24px;
+  background-color: rgb(237, 235, 235);
+}
