--- a/src/components/CoinTable/CoinTableRow.scss
+++ b/src/components/CoinTable/CoinTableRow.scss
@@ -14,7 +14,7 @@
 }
 
 .coin-button {
-  background-color: #008CBA;
+  background-color: #38537B;
   color: white;
   border: 2px solid white; 
   font-size: 16px;
