--- a/src/components/InfoDisplay.scss
+++ b/src/components/InfoDisplay.scss
@@ -11,5 +11,6 @@
 }
 .info-header {
   font-size: 24px;
-  background-color: rgb(237, 235, 235);
+  padding: 3px;
+  background-color: rgb(222, 226, 232);
 }
