add styling to dashboard

--- a/src/components/CoinTable/CoinTableRow.scss
+++ b/src/components/CoinTable/CoinTableRow.scss
@@ -13,6 +13,11 @@
   cursor: pointer;
 }
 
+.coin-logo {
+  width: 32px;
+  height: 32px;
+}
+
 .coin-button {
   background-color: #38537B;
   color: white;
