--- a/src/components/Candlestick/DisplayChart.scss
+++ b/src/components/Candlestick/DisplayChart.scss
@@ -4,6 +4,9 @@
   margin-left: 0px;
   margin-right: 100px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
   label {
