--- a/src/components/InfoDisplay.scss
+++ b/src/components/InfoDisplay.scss
@@ -10,23 +10,26 @@
   padding: 10px;
   padding-bottom: 0;
   border: solid  rgba(0, 0, 0, 0.5) 2px;
-  border-radius: 10px;
   background-color: white;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   margin: 8px
 }
 
 .info-page-container:hover {
-  font-size: 20px;
+  font-weight: 700;
   .info-text {
-    background-color: rgb(221, 228, 232);
-    box-shadow: 0 0 40px white, inset 0 0 20px white;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.7), inset 0 0 20px white;
     text-shadow: 0 0 40px white;
-
   }
 }
 .info-header {
-  font-size: 24px;
+  font-size: 18px;
   padding: 3px;
-  font-weight: 700;
+  // background-color: rgb(226, 235, 244);
+  border: solid black 1px;
+}
+
+.info-content {
+  font-size: 22px;
+
 }
