add erro handling to forms

--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -10,6 +10,12 @@
   background-size: cover; 
   overflow: hidden;
 }
+
+.alert {
+  background-color: rgb(245, 187, 166);
+  border: 1px solid black;
+}
+
 .form-container{
   margin-bottom: 200px;
   display: block;
